// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReadMorePayslipScreen snapshot test should render correct ui for ReadMorePayslipScreen when payslip is present and downloaded and loading is false 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flexGrow": 1,
    }
  }
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View />
</RCTScrollView>
`;

exports[`ReadMorePayslipScreen snapshot test should render correct ui for ReadMorePayslipScreen when payslip is present and loading is true 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flexGrow": 1,
    }
  }
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "flex": 1,
          "margin": 10,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 112.5,
          }
        }
      >
        <Image
          source={Object {}}
          style={
            Object {
              "height": 100,
              "width": 100,
            }
          }
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`ReadMorePayslipScreen snapshot test should render correct ui for ReadMorePayslipScreen when payslip is present and not downloaded and loading is false 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flexGrow": 1,
    }
  }
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View />
</RCTScrollView>
`;

exports[`ReadMorePayslipScreen snapshot test should render correct ui for ReadMorePayslipScreen when payslip is undefined and loading is false 1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flexGrow": 1,
    }
  }
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View />
</RCTScrollView>
`;
